fix(ceg): redundant scrollbar

--- a/packages/web/src/app/shared/component-documentation/ceg/ceg.component.scss
+++ b/packages/web/src/app/shared/component-documentation/ceg/ceg.component.scss
@@ -4,7 +4,6 @@
   display: grid;
   grid-template-columns: 8fr 2fr;
   gap: 16px 24px;
-  overflow: auto;
 
   @include breakpoints.breakpoint-up(Mobile) {
     grid-template-columns: 1fr;
